art-cluster/pipelines/config/argocd/project/art-cd/quay-doomsday-backup/base/service.yaml
kind: Service
apiVersion: v1
metadata:
 name: el-doomsday-pipeline-event-listener
 namespace: art-cd
 labels:
   app.kubernetes.io/managed-by: EventListener
   app.kubernetes.io/part-of: Triggers
   eventlistener: doomsday-pipeline-event-listener
spec:
 ports:
   - name: http-listener
     protocol: TCP
     port: 8080
     targetPort: 8080
