art-cluster/pipelines/config/argocd/project/art-cd/quay-doomsday-backup/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
 name:  el-doomsday-pipeline-event-listener
 namespace: art-cd
spec:
 to:
   kind: Service
   name: el-doomsday-pipeline-event-listener
   weight: 100
 port:
   targetPort: http-listener
 tls:
   termination: edge
   insecureEdgeTerminationPolicy: Redirect
 wildcardPolicy: None
